[FIX] html_editor: fix URL input and icon alignment in link popover
Steps to Reproduce:
- open notes
- type `/link` to open link popover

Issue:
- The url input field and its icon are misaligned.

Cause:
- When url autocomplete are enabled in the link popover, the input field height
  is reduced, causing it to become smaller than its container. This results in
  misalignment between the input field and the icon.

Solution:
- Set the link popover url input height to 100% so it always matches the height
  of its container, ensuring proper alignment even when autocomplete is
  avaialble.

task-6201175

--- a/addons/html_editor/static/src/main/link/link_popover.scss
+++ b/addons/html_editor/static/src/main/link/link_popover.scss
@@ -53,6 +53,11 @@
     .oe_link_label_icon {
         fill: rgba($body-color, 0.7);
     }
+
+    .o_we_label_link,
+    .o_we_href_input_link {
+        height: 100%;
+    }
 }
 
 /* rtl:begin:ignore */
